# aoc-2024

./: Cargo.toml  Taskfile.yml
aoc/: Cargo.toml
aoc/inputs/: day1.scm  day11d.txt  day17d.txt  day17e.txt  xx.txt
aoc/src/: main.rs
aoc/src/commands/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day1a.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day2a.rs  day3a.rs  day4a.rs  day4b.rs  day5a.rs  day6a.rs  day7a.rs  day8a.rs  day9a.rs  day9b.rs  mod.rs
xtask/src/: main.rs
