[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0.29", features=["derive"]}
enum_dispatch = "0.3.8"
itertools = "0.13.0"
nom = "7.1.3"
portable-atomic = "1.10.0"
regex = "1.11.1"
rstest = "0.23.0"
strum = "0.26"
strum_macros = "0.26"
